--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -8,6 +8,6 @@ appTitle=First DevOps Application
 #YDES: Application description
 appDescription=A Fiori application.
 #XTIT: Main view title
-title=First DevOps Application
+title=DevOps Application
 
 flpTitle=Demo Dev
