--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,7 +3,7 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=First DevOps Application
+appTitle=DevOps Application
 
 #YDES: Application description
 appDescription=A Fiori application.
